# dialog-emotions-demo

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
data/: dialog_misha_evelina_emotions.csv  synthetic_dialog.csv
dialog_emo_demo/: __init__.py  pipeline.py  plotting.py  schema.py  synthetic.py  telegram.py  ui.py
dialog_emo_demo/models/: __init__.py
docs/: PLAN.md
output/: parsed.csv  scored.csv
scripts/: generate_synthetic_data.py  score_telegram_export.py
tests/: test_app.py  test_pipeline.py  test_plotting.py  test_schema.py  test_telegram.py
