[project]
name = "dialog-emo-demo-codex"
version = "0.1.0"
description = "Gradio demo for tracking emotion trajectories across a dialogue"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=6.14.0",
    "pandas>=2.3.3",
    "plotly>=6.7.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
